# blackhole

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
assets/package/: package_meta.json
builder/: CMakeLists.txt  driver.vs
builder/src/: CtxBuilder.cpp  CtxBuilder.hpp  main.cpp
common/: CurlWrapper.hpp  FileUtils.hpp  Logger.cpp  Logger.hpp  Manifest.hpp  PackageMeta.hpp  PackageMetaV1.hpp  ParamParser.cpp  ParamParser.hpp
creator/: CMakeLists.txt
creator/src/: main.cpp
src/: Config.hpp  PackageDatabase.hpp  PackageManager.cpp  PackageManager.hpp  main.cpp
tests/: CMakeLists.txt  test_ctxbuilder.cpp  test_main.cpp  test_manifest.cpp  test_packagemeta_v1.cpp
